Backend FastAPI/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-deployment
  labels:
    app: fastapi
spec:
  replicas: 2  # You can scale up or down as needed
  selector:
    matchLabels:
      app: fastapi
  template:
    metadata:
      labels:
        app: fastapi
    spec:
      containers:
      - name: fastapi
        image: narzee17/sympto-app:latest  # Replace with your Docker Hub username/image if different
        ports:
        - containerPort: 8000
